--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -1,67 +1,27 @@
+/* Elements related to material design and cards */
 
-
-i {
-    padding: 5px;
-}
-
-a {
-    text-decoration: none;
-}
-
-
-#form {
-    width: 1200px;
-    margin: auto;
-    border: dotted 1px grey;
-    padding: 10px;
-}
-
-input {
-    padding: 5px;
-    border: solid 1px LightGrey;
-}
-
-label {
-    display: block;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    width: auto;
-    text-transform: uppercase;
-}
-
-.form-element {
-    .col-1-4;
-    float: left;
-}
-
-.material-shadow{
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+.material-shadow {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .card {
     .material-shadow;
     background: white;
-      border-radius: 2px;
+    border-radius: 2px;
     .title {
         .font-size-title;
     }
-
 }
 
-table {
-    width: 100%;
-    table-layout: fixed;
-       .table-header {
-        color: @textColorGray;
-    }
-    border: 1px solid black;
-}
 
-.thumbnail {
-    width: 50px;
+/* Elements related to tables */
+
+.table-top {
+    .font-size-title;
     height: 50px;
-    border-radius: 50%;
+    border-bottom: 1px solid @dividerColor;
 }
 
 
+/* Input form */
 
