--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -1,5 +1,10 @@
-.gecko-detail-card, .events-table, .gecko-card {
+.gecko-detail-card, .events-table, .gecko-card, .add-gecko-form {
     width: 1200px;
-    margin: 20px auto;
+    margin: 30px auto;
+}
+
+.add-gecko-form {
+    margin-bottom: 50px;
+    padding-bottom: 25px;
 }
 
