--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -1,24 +1,22 @@
-<!-- CONTAINER FOR GECKO DETAIL INFORMATION -->
+<!-- CONTAINER FOR GECKO DETAILED INFORMATION -->
 <div class='gecko-detail'>
     <div class='content'>
         <div class="gecko-detail-card grid">
-            <div class="title">
+            <div class="title col-2-3">
                 <img class="thumbnail" src="http://natgeo.petsmart.com/content/img/leopard-gecko/leopard-gecko-fun-facts.jpg">
                 <span class="super-size">{{geckoDetail.name}}</span>
-                <i class='fa fa-mars male' ng-if="gecko.sex == 'male'"></i>
-                <i class='fa fa-venus female' ng-if="gecko.sex == 'female'"></i>
-                <i class='fa fa-question unknown' ng-if="gecko.sex == 'unknown'"></i>
-                <a href="/"><i class='fa fa-compress'></i></a>
-                <i class='fa fa-trash link' ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)"></i>
-            </div>
+                <i class='fa fa-mars male' ng-if="gecko.sex == 'male'" title="male"></i>
+                <i class='fa fa-venus female' ng-if="gecko.sex == 'female'" title="female"></i>
+                <i class='fa fa-question unknown' ng-if="gecko.sex == 'unknown'" title="gender unknown"></i>
+                <span class="table-header"> ID:</span> {{geckoDetail.id}}
+                 </div>
+                <div class="right col-1-3">
+                    <a href="/"><i class='fa fa-compress'></i></a>
+                    <i class='fa fa-trash link' ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)"></i>
+                </div>
+
             <table>
                 <tr>
-                    </td>
-                    <td class="table-header">
-                        ID:
-                    </td>
-                    <td>
-                        {{geckoDetail.id}}
                     </td>
                     <td class="table-header">
                         Morph:
@@ -37,15 +35,16 @@
                     </td>
                     <td>
                         {{geckoDetail.status}}
-
-                </tr>
-                <tr>
+                    </td>
                     <td class="table-header">
-                        Current Weight:
+                        Weight:
                     </td>
                     <td>
                         {{geckoDetail.currWeight}}
                     </td>
+
+                </tr>
+                <tr>
                     <td class="table-header">
                         Birthdate:
                     </td>
