--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -12,64 +12,74 @@
 
     <!-- ADD GECKO FORM -->
     <!-- KENNY: This should be moved into a directive. -->
-    <div ng-controller='AddGeckoController' ng-show='showForm'>
+    <div ng-controller='AddGeckoController' ng-show='showForm' class="add-gecko-form">
 
         <form name="addGeckoForm" id="form">
-            <h1>Add Gecko Form</h1>
+            <div class="table-top">Add Gecko Form</div>
             <p style="color: red;">{{validationMsg}}</p>
             <div class="grid">
-                <div class="form-element">
-                    <label>Gecko's Name</label>
+                <div class="row">
+                <div class="col-1-4">
+                    <label>Name of Gecko</label>
                     <input type="text" placeholder="ex. Tammy or Gecko #23" ng-model="form.name">
                 </div>
-                <div class="form-element">
-                    <label>MORPH tYPE</label>
-                    <input type="text" placeholder="ex. Lavender Jungle Bandit" ng-model="form.morph">
-                </div>
-                <div class="form-element">
-                    <label>Weight (grams)</label>
-                    <input type="number" placeholder="ex. 33" ng-model="form.weight">
-                </div>
-                <div class="form-element">
-                    <label>Date of Birth</label>
-                    <input type="date" placeholder="birthdate" ng-model="form.birthDate">
-                </div>
-                <div class="form-element">
-                    <label>date of Purchase</label>
-                    <input type="date" placeholder="date of purchase" ng-model="form.purchaseDate">
-                </div>
-                <div class="form-element">
+                <div class="col-1-4">
                     <label>ID</label>
                     <input type="text" placeholder="ex. 16M24" ng-model="form.userID">
                 </div>
-                <div class="form-element">
-                    <label>Location</label>
-                    <input type="text" placeholder="ex. Bin 2A" ng-model="form.location">
+                <div class="col-1-4">
+                    <label>Morph Type</label>
+                    <input type="text" placeholder="ex. Lavender Jungle Bandit" ng-model="form.morph">
                 </div>
-                <div class="form-element">
+                <div class="col-1-4">
                     <label>Sex</label>
                     <select ng-model="form.sex">
-                        <option value=male>Male</option>
+                        <option value="male">Male</option>
                         <option value="female">Female</option>
                         <option value="unknown" selected>Unknown</option>
                     </select>
                 </div>
-                <div class="form-element">
+                </div><div class="row">
+                <div class="col-1-4">
+                    <label>Location</label>
+                    <input type="text" placeholder="ex. Bin 2A" ng-model="form.location">
+                </div>
+                <div class="col-1-4">
+                    <label>Date of Birth</label>
+                    <input type="date" placeholder="birthdate" ng-model="form.birthDate">
+                </div>
+                <div class="col-1-4">
+                    <label>Date of Purchase</label>
+                    <input type="date" placeholder="date of purchase" ng-model="form.purchaseDate">
+                </div>
+                <div class="col-1-4">
+                    <label>Stage</label>
+                    <select ng-model="form.stage">
+                        <option value="unknown" selected>Unknown</option>
+                        <option value="adult">Adult</option>
+                        <option value="hatchling">Hatchling</option>
+                        <option value="egg">Egg</option>
+                    </select>
+                </div>
+                </div><div class="row">
+                <div class="col-3-4">
+                    <label>Notes</label>
+                    <input type="textarea" rows="1" cols="50">
+                </div>
+                <div class="col-1-4">
                     <label>Status</label>
                     <select ng-model="form.status">
                         <option value="unknown" selected>Unknown</option>
-                        <option value="normal">Normal</option>
                         <option value="gravid">Gravid</option>
-                        <option value="egg">Egg</option>
                         <option value="sold">Sold</option>
                         <option value="dead">Dead</option>
                     </select>
                 </div>
+                <button ng-click="submitForm()">Add Gecko</button>
             </div>
-            <button ng-click="submitForm()">Add Gecko</button>
+            </div>
         </form>
     </div>
-
     <gecko-table></gecko-table>
     <!--<egg-table></egg-table> -->
 </div>
