--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -1,7 +1,11 @@
 <!-- CONTAINER FOR GECKO INFORMATION -->
 <div>
     <div class='status-bar'>
-        <div class="col-1-2">{{statusMsg}}</div>
+                <div class="col-1-2 left">{{statusMsg}}</div>
+        <div class="col-1-2 right">
+            <a href="/">Go Back
+            </a>
+        </div>
     </div>
 <gecko-detail gecko-id="geckoDetail._id"></gecko-detail>
     
