--- a/public/assets/css/layout/_l-grid.less
+++ b/public/assets/css/layout/_l-grid.less
@@ -8,13 +8,6 @@
 |__________________________________________________________________________
 */
 
-*,
-*:after,
-*:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
 
 
 /* grid container */
@@ -26,6 +19,11 @@
 .grid:after {
     content: "";
     display: table;
+    clear: both;
+}
+
+.row {
+    padding-bottom: 60px;
     clear: both;
 }
 
@@ -63,6 +61,10 @@
 
 .col-1-4 {
     width: 25%;
+}
+
+.col-3-4 {
+    width: 75%;
 }
 
 /* column 1/5 width of parent */
