--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -49,7 +49,7 @@
                         Birthdate:
                     </td>
                     <td>
-                        {{geckoDetail.birthDate | date:'mediumDate'}}
+                        {{geckoDetail.birthdate | date:'mediumDate'}}
                     </td>
                     <td class="table-header">
                         Purchase Date:
