--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -31,7 +31,7 @@
      border-bottom: solid 1px @evenRowColor;
 }
 
-.gecko-card tr:not(.link-nohover):hover {
+.gecko-card tr:not(.link--nohover):hover {
     background: @lightPrimaryColor;
 }
 
