--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -34,6 +34,7 @@
 /* Search box on Gecko List */
 .search-box {
     .col-1-4;
+    .material-shadow--light;
     margin: 10px;
     border: solid 1px @dividerColor;
     padding: 5px;
@@ -49,6 +50,7 @@
 
 .gecko-detail-card .table-header {
     width: 75px;
+    color: @textColorGray;
 }
 
 .thumbnail {
