--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
-
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -15,6 +14,24 @@ a:visited {
 a:hover:not(.link--nohover),
 .link:hover {
     color: @accentColor;
+}
+
+button {
+    padding: 8px 10px;
+    margin-top: 12px;
+    background: @accentColor;
+    font-weight: bold;
+    color: @textColorLight;
+    border: 0;
+    .material-shadow;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: all 0.5s;
+    .round-corner;
+    &:hover {
+        background: lighten(@accentColor, 10%);
+        .material-shadow--hover;
+    }
 }
 
 body {
