--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -1,13 +1,28 @@
 /* Elements related to material design and cards */
 
+/* Used for cards and buttons */
 .material-shadow {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
+/* Used on hoverover of buttons */
+.material-shadow--hover {
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
+}
+
+/* used for chips */
+.material-shadow--light {
+        box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
+}
+
+.round-corner {
+    border-radius: 2px;
+}
+
 .card {
     .material-shadow;
-    background: white;
-    border-radius: 2px;
+    background: @white;
+    .round-corner;
     .title {
         .font-size-title;
     }
