Moved addGeckoForm to its own directive

--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -21,7 +21,7 @@
 
 .card {
     .material-shadow;
-    background: @white;
+    background: @background;
     .round-corner;
     .title {
         .font-size-title;
