--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -3,7 +3,7 @@
     <div class='status-bar'>
                 <div class="col-1-2 left">{{statusMsg}}</div>
         <div class="col-1-2 right">
-            <a href="/">Go Back
+            <a href="/">GO BACK
             </a>
         </div>
     </div>
