--- a/public/assets/css/base/_b-colors.less
+++ b/public/assets/css/base/_b-colors.less
@@ -26,6 +26,7 @@
 */
 @white: @textColorLight;
 @black: @textColorDark;
+@background : rgba(255,255,255,0.9);
 
 // Light gray (lightened of @divederColor) use in alternating rows of tables
 @evenRowColor: lighten(@dividerColor, 20%);
