--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -122,7 +122,7 @@ th {
 }
 .card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.9);
   border-radius: 2px;
 }
 .card .title {
@@ -2423,7 +2423,7 @@ th {
 }
 .events-table {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.9);
   border-radius: 2px;
   padding: 0;
 }
@@ -2539,9 +2539,9 @@ th {
 /* Gecko Card (List) */
 .gecko-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  background: rgba(255, 255, 255, 0.9);
   border-radius: 2px;
   margin: 20px auto;
-  background: #ffffff;
   line-height: 14px;
   padding: 0;
 }
@@ -2558,14 +2558,14 @@ th {
 .search-box {
   width: 25%;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
+  background: white;
   margin: 10px;
-  border: solid 1px #bdbdbd;
   padding: 5px;
 }
 /* Gecko Detail */
 .gecko-detail-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.9);
   border-radius: 2px;
   padding: 10px;
   line-height: 50px;
@@ -2600,7 +2600,7 @@ th {
 }
 .add-gecko-form {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.9);
   border-radius: 2px;
   padding: 10px;
 }
