--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -18,8 +18,6 @@
 .gecko-card {
      .card;
     margin: 20px auto;
-    background: @textColorLight;
-
     line-height: 14px;
     padding: 0;
 }
@@ -35,8 +33,8 @@
 .search-box {
     .col-1-4;
     .material-shadow--light;
+    background: white;
     margin: 10px;
-    border: solid 1px @dividerColor;
     padding: 5px;
 }
 
